2002-04-23  Eric Schabell <eric@schabell.com>

                Changed PRE_BUILD so that it does not just
                exit by default, now it will execute if you
                answer yes to the questions (thanks Yoav).

2002-03-19  Eric Schabell <eric@schabell.com>

		Added HISTORY file. Spell rejected as it really
		bogs down a site by creating many connections
		blocking other users. Not really user friendly!