@@ -1,0 +1,2 @@
+warn_rejected &&
+ask_continue_with_rejected
