@@ -1,4 +1,0 @@
-if  [  -x  /etc/init.d/apache.sh  ]
-then
-  /etc/init.d/apache.sh  restart
-fi
