@@ -1,0 +1,3 @@
+warn_rejected &&
+ask_continue_with_rejected
+
