@@ -1,4 +1,0 @@
-warn_rejected &&
-ask_continue_with_rejected &&
-    
-default_pre_build
