@@ -1,3 +1,8 @@
+2003-08-22  Geoffrey Derber <gderber@sourcemage.org>
+
+		moved z-rejected warning messages
+		to CONFIGURE from PRE_BUILD
+
 2003-05-01  Rob Verkuylen <rob@verkuylen.net>
 
 		Copied /init.d/samba.sh to /init.d/samba
